--- a/rootdir/meta_init.rc
+++ b/rootdir/meta_init.rc
@@ -164,6 +164,7 @@ on load_persist_props_action
     start logd
     start logd-reinit
 
+
 # Mount filesystems and start core system services.
 on late-init
     trigger early-fs
@@ -191,7 +192,7 @@ on fs
     write /sys/class/android_usb/android0/f_ffs/aliases adb
 #INTERNAL_START
     write /proc/bootprof "INIT:Mount_START"
-    mount_all /fstab.mt6797 multi_init.rc
+    mount_all /fstab.mt6757 multi_init.rc
     write /proc/bootprof "INIT:Mount_END"
 #INTERNAL_END
 
@@ -400,6 +401,8 @@ on boot
     hostname localhost
     domainname localdomain
 
+    setprop logmuch.detect.value 10000
+
 #INTERNAL_START
     class_start default
 #INTERNAL_END
@@ -472,6 +475,13 @@ on property:ro.debuggable=1
     chmod 0773 /data/misc/trace
     start console
 
+
+service thermal_manager /vendor/bin/thermal_manager   vendor/etc/.tp/.thermal_meta.conf
+    class main
+    user root
+    group system
+    oneshot
+
 # adbd is controlled via property triggers in init.<platform>.usb.rc
 service adbd /sbin/adbd --root_seclabel=u:r:su:s0
     class core
@@ -488,8 +498,8 @@ service nvram_daemon /vendor/bin/nvram_daemon
     group system
     oneshot
 
-service fuelgauged /system/bin/fuelgauged
-    class main
+service fuelgauged /vendor/bin/fuelgauged
+    class core
 
 service mobile_log_d /vendor/bin/mobile_log_d
     class main
