--- a/rootdir/init.connectivity.rc
+++ b/rootdir/init.connectivity.rc
@@ -1,32 +1,47 @@
 # MTK connectivity .rc configure
 
 on post-fs-data
-    # /dev/ttyMT2 for Connectivity BT/FM/GPS usage
+
+
+#
+# Connectivity related device nodes & configuration (begin)
+#
+
+#/dev/ttyMT2 for Connectivity BT/FM/GPS usage
     chmod 0660 /dev/ttyMT2
     chown system system /dev/ttyMT2
 
-    # GPS
+
+# GPS
     mkdir /data/gps_mnl 0771 gps system
     mkdir /data/misc/gps 0770 gps system
     chown gps system /data/mpe_mnl
+    chmod 0775 /vendor/xbin/MPED
     chown gps gps /sys/class/gpsdrv/gps/pwrctl
     chown gps gps /sys/class/gpsdrv/gps/suspend
     chown gps gps /sys/class/gpsdrv/gps/state
     chown gps gps /sys/class/gpsdrv/gps/pwrsave
     chown gps gps /sys/class/gpsdrv/gps/status
 
-    # GPS EMI
-    chmod 666 /dev/gps_emi
-    chown gps gps /dev/gps_emi
-
-    # WiFi
+# WiFi
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wpa_supplicant 0770 wifi wifi
 
-    # BT relayer mode used VCOM
+# BT relayer mode used VCOM
     chown bluetooth net_bt_stack /dev/ttyGS2
     chmod 0660 /dev/ttyGS2
+
+#
+# Connectivity related device nodes & configuration (end)
+#
+
+
+on init
+
+#
+# Connectivity related services (Begin)
+#
 
 # WMT
 service wmt_loader /vendor/bin/wmt_loader
@@ -40,6 +55,16 @@ service wmt_launcher /vendor/bin/wmt_launcher -p /vendor/firmware/
     group system
     class core
 
+on property:service.wcn.coredump.mode=2
+start stp_dump
+
+service stp_dump /vendor/bin/stp_dump3
+    user root
+    group root
+    class core
+    disabled
+    oneshot
+
 # GPS
 service mnld /vendor/bin/mnld
     class main
@@ -47,7 +72,18 @@ service mnld /vendor/bin/mnld
     group gps inet misc sdcard_rw sdcard_r media_rw system radio
     socket mnld stream 660 gps system
 
-# Wifi
+service MPED /vendor/bin/MPED
+    class main
+    user gps
+    group gps inet misc sdcard_rw sdcard_r media_rw system
+    socket MPED stream 660 gps system
+
+#service BGW /vendor/bin/BGW
+#    user system
+#    group gps system radio
+#    class main
+
+# Wlan
 service wifi2agps /vendor/bin/wifi2agps
     class main
     user wifi
@@ -56,7 +92,7 @@ service wifi2agps /vendor/bin/wifi2agps
 service p2p_supplicant /system/bin/wpa_supplicant \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf -N \
-    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -dd \
+    -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -d \
     -I/system/etc/wifi/p2p_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
@@ -69,7 +105,7 @@ service p2p_supplicant /system/bin/wpa_supplicant \
     oneshot
 
 service wpa_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -dd \
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -e/data/misc/wifi/entropy.bin -d \
     -I/system/etc/wifi/wpa_supplicant_overlay.conf \
     -O/data/misc/wifi/sockets -g@android:wpa_wlan0
     #   we will start as root and wpa_supplicant will switch to user wifi
@@ -80,3 +116,8 @@ service wpa_supplicant /system/bin/wpa_supplicant \
     socket wpa_wlan0 dgram 660 wifi wifi
     disabled
     oneshot
+
+#
+# Connectivity related services (End)
+#
+
