--- a/rootdir/init.modem.rc
+++ b/rootdir/init.modem.rc
@@ -1,35 +1,41 @@
+# Copyright (C) 2012 The Android Open Source Project
+#
+# IMPORTANT: Do not create world writable files or directories.
+# This is a common source of Android security bugs.
+#
+
 on early-init
-    write /sys/class/net/ccmni0/queues/rx-0/rps_cpus "3ff"
-    write /sys/class/net/ccmni1/queues/rx-0/rps_cpus "3ff"
-    write /sys/class/net/ccmni2/queues/rx-0/rps_cpus "3ff"
+    write /sys/class/net/ccmni0/queues/rx-0/rps_cpus "ff"
+    write /sys/class/net/ccmni1/queues/rx-0/rps_cpus "ff"
+    write /sys/class/net/ccmni2/queues/rx-0/rps_cpus "ff"
     write /sys/class/net/ccmni0/queues/rx-0/rps_flow_cnt "1000"
     write /sys/class/net/ccmni1/queues/rx-0/rps_flow_cnt "1000"
     write /sys/class/net/ccmni2/queues/rx-0/rps_flow_cnt "1000"
-    setprop net.perf.tether.rps 00f
-    setprop net.perf.rps.default 3ff
-    setprop net.perf.tether.cpu.core 4,4,0,0,0,0
-    setprop net.perf.tether.cpu.freq 1118000,1391000,0,0,0,0
-    setprop net.perf.internal.cpu.core 4,4,0,0,0,0
-    setprop net.perf.internal.cpu.freq -1,-1,-1,-1,-1,-1
+    setprop net.perf.rps ff
+    setprop net.perf.cpu.core 4,4,0,0
+    setprop net.perf.cpu.freq 1183000,1638000,0,0
 
 on post-fs-data
-    # Modem related device nodes
-    mkdir /data/nvram/md 0770 root system
-    mkdir /data/nvram/md3 0770 root system
-    mkdir /data/md3 0770 root system
 
+    write /proc/bootprof "post-fs-data: on modem start"
+
+    # Modem related device nodes
+    mkdir /data/nvram/md  0770 root system
+    mkdir /data/nvram/md3  0770 root system
+    mkdir /data/md3	0770 root system
+#  Build-in Modified - S
+#    insmod /vendor/lib/modules/ccci_plat.ko
+#    insmod /vendor/lib/modules/ccci.ko
+#  Build-in Modified - E
+#   chown radio radio /sys/class/BOOT/BOOT/boot/md
     chown radio radio /sys/kernel/ccci/boot
 
-    # SELinux
+#SeLinux
     mkdir /data/ccci_cfg 0770 system radio
     restorecon /data/ccci_cfg
     restorecon_recursive /protect_f
     restorecon_recursive /protect_s
-
-    # ignore permission check
-    write /data/ccci_cfg/md_new_ver.1 "flag"
-    chmod 0660 /data/ccci_cfg/md_new_ver.1
-
+# Encrypt phone function
     setprop vold.post_fs_data_done 1
 
 service gsm0710muxd /vendor/bin/gsm0710muxd -s /dev/ttyC0 -f 512 -n 8 -m basic
@@ -45,7 +51,7 @@ service gsm0710muxdmd2 /vendor/bin/gsm0710muxdmd2 -s /dev/ccci2_tty0 -f 512 -n 8
     group radio cache inet misc
     disabled
     oneshot
-
+    
 service muxreport-daemon /vendor/bin/muxreport
     class core
     user radio
@@ -72,8 +78,6 @@ service ril-daemon-mtk /vendor/bin/mtkrild
     socket rild-mbim stream 660 root radio
     socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket sap_uim_socket2 stream 660 bluetooth bluetooth
-    socket sap_uim_socket3 stream 660 bluetooth bluetooth
-    socket sap_uim_socket4 stream 660 bluetooth bluetooth
     user root
     group radio cache inet misc audio sdcard_r sdcard_rw log system
     disabled
@@ -98,9 +102,36 @@ service ril-daemon-mtkmd2 /vendor/bin/mtkrildmd2
     disabled
     oneshot
 
+service md_minilog_util /vendor/bin/md_minilog_util
+    user radio
+    disabled
+    oneshot
+
+#VIA RILD service
+service viarild /vendor/bin/viarild -l /vendor/lib/libviatelecom-withuim-ril.so -- -d /dev/ttySDIO4
+    class core
+    socket rild-via stream 660 radio radio
+    socket msap_c2k_socket1 stream 660 radio radio
+    socket msap_c2k_socket2 stream 660 radio radio
+    socket msap_c2k_socket3 stream 660 radio radio
+    socket msap_c2k_socket4 stream 660 radio radio
+    socket rpc stream 660 radio system
+    socket rild-debug stream 660 radio system
+    socket rild-ctclient stream 660 radio system
+    socket rild-atci-c2k stream 660 radio system
+    group radio cache inet misc audio sdcard_r sdcard_rw log system
+    disabled
+    oneshot
+
 #
 #  Modem related services (Begin)
 #
+
+service permission_check /vendor/bin/permission_check
+    class main
+    user root
+    group system radio
+    oneshot
 
 service ccci_fsd /vendor/bin/ccci_fsd 0
     user radio
@@ -128,8 +159,20 @@ service ccci3_mdinit /vendor/bin/ccci_mdinit 2
 
 service ccci_rpcd /vendor/bin/ccci_rpcd 0
     user radio
-    group radio cache inet misc
+    group radio system
     class core
+    oneshot
+
+service pppd_gprs /system/bin/pppd_dt /dev/ttyACM0 debug noauth refuse-eap usepeerdns nodetach
+    user root
+    group radio cache inet misc
+    disabled
+    oneshot
+
+#Add by T.Zh for ppp daemon
+service pppd /system/bin/pppd file /data/misc/ppp/ppp_options
+    user root
+    disabled 
     oneshot
 
 #
@@ -137,6 +180,10 @@ service ccci_rpcd /vendor/bin/ccci_rpcd 0
 #  Modem related services (End)
 #
 
+#Add by hp.chen for 
+#
+#   Telephony Early Read service
+#
 service terservice /vendor/bin/terservice
     class core
     user radio
@@ -145,3 +192,4 @@ service terservice /vendor/bin/terservice
 
 on property:ril.muxreport=1
     start muxreport-daemon
+
