--- a/rootdir/init.mt6757.usb.rc
+++ b/rootdir/init.mt6757.usb.rc
@@ -90,8 +90,10 @@ on property:sys.usb.config=mass_storage,adb
 #6.mtp
 on property:sys.usb.config=mtp
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
-    write /sys/class/android_usb/android0/idProduct 2008
+#LCSH MOD by XuFeng(Lenovo) start
+    write /sys/class/android_usb/android0/idVendor 22b8
+    write /sys/class/android_usb/android0/idProduct 2e82
+#LCSH MOD by XuFeng(Lenovo) end
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
@@ -109,8 +111,10 @@ on property:sys.usb.config=mtp,acm
 #8.mtp,adb
 on property:sys.usb.config=mtp,adb
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
-    write /sys/class/android_usb/android0/idProduct 201D
+#LCSH MOD by XuFeng(Lenovo) start
+    write /sys/class/android_usb/android0/idVendor 22b8
+    write /sys/class/android_usb/android0/idProduct 2e76
+#LCSH MOD by XuFeng(Lenovo) end
     write /sys/class/android_usb/android0/functions mtp,adb
     write /sys/class/android_usb/android0/enable 1
     start adbd
@@ -149,8 +153,10 @@ on property:sys.usb.config=mtp,mass_storage,adb
 #12.ptp
 on property:sys.usb.config=ptp
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
-    write /sys/class/android_usb/android0/idProduct 200B
+#LCSH MOD by XuFeng(Lenovo) start
+    write /sys/class/android_usb/android0/idVendor 22b8
+    write /sys/class/android_usb/android0/idProduct 2e83
+#LCSH MOD by XuFeng(Lenovo) end
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state ${sys.usb.config}
@@ -168,8 +174,10 @@ on property:sys.usb.config=ptp,acm
 #14.ptp,adb
 on property:sys.usb.config=ptp,adb
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
-    write /sys/class/android_usb/android0/idProduct 200C
+#LCSH MOD by XuFeng(Lenovo) start
+    write /sys/class/android_usb/android0/idVendor 22b8
+    write /sys/class/android_usb/android0/idProduct 2e84
+#LCSH MOD by XuFeng(Lenovo) start
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
     start adbd
@@ -208,8 +216,10 @@ on property:sys.usb.config=ptp,mass_storage,adb
 #18.rndis
 on property:sys.usb.config=rndis
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
-    write /sys/class/android_usb/android0/idProduct 2004
+#LCSH MOD by XuFeng(Lenovo) start
+    write /sys/class/android_usb/android0/idVendor 22b8
+    write /sys/class/android_usb/android0/idProduct 2e24
+#LCSH MOD by XuFeng(Lenovo) end
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/bDeviceClass 224
     write /sys/class/android_usb/android0/enable 1
@@ -228,8 +238,10 @@ on property:sys.usb.config=rndis,acm
 #20.rndis,adb
 on property:sys.usb.config=rndis,adb
     write /sys/class/android_usb/android0/enable 0
-    write /sys/class/android_usb/android0/idVendor ${sys.usb.vid}
-    write /sys/class/android_usb/android0/idProduct 2005
+#LCSH MOD by XuFeng(Lenovo) start
+    write /sys/class/android_usb/android0/idVendor 22b8
+    write /sys/class/android_usb/android0/idProduct 2e25
+#LCSH MOD by XuFeng(Lenovo) end
     write /sys/class/android_usb/android0/functions ${sys.usb.config}
     write /sys/class/android_usb/android0/enable 1
     start adbd
@@ -1023,9 +1035,6 @@ on property:sys.usb.config=mbim,adb,gs0gs1
     setprop sys.usb.state ${sys.usb.config}
     setprop sys.usb.acm_idx 1,2
 
-on property:sys.usb.config=*
-    write /sys/class/android_usb/android0/log ${sys.usb.config}
-
 on property:sys.usb.bicr=yes
     write /sys/class/android_usb/android0/f_mass_storage/bicr 1
     write /sys/class/android_usb/android0/f_mass_storage/lun/file "/dev/block/loop0"
@@ -1074,3 +1083,14 @@ on property:mediatek.em.usb.set=RG_USB20_VRT_VREF_SEL
 
 on property:mediatek.em.usb.set=RG_USB20_INTR_EN
 	write /sys/kernel/debug/usb20_phy/RG_USB20_INTR_EN ${mediatek.em.usb.value}
+
+on property:mediatek.em.usb.set=RG_USB20_PHY_REV6
+	write /sys/kernel/debug/usb20_phy/RG_USB20_PHY_REV6 ${mediatek.em.usb.value}
+
+on property:persist.mediatek.usb.otg.switch=0
+  write /sys/devices/platform/otg_iddig/otg_mode 0
+  setprop mediatek.usb.otg.switch.state ${persist.mediatek.usb.otg.switch}
+
+on property:persist.mediatek.usb.otg.switch=1
+  write /sys/devices/platform/otg_iddig/otg_mode 1
+  setprop mediatek.usb.otg.switch.state ${persist.mediatek.usb.otg.switch}
